# arcanum-create-app

./: Cargo.toml  README.md  build.rs
src/: example_main.rs  main.rs  projectargs.rs  templates.rs
templates/rust-html-scss-js/: Cargo.toml  package.json
templates/rust-html-scss-js/src/: main.rs
templates/rust-html-scss-ts/: package.json  tsconfig.json
templates/rust-html-scss-ts/src/: main.rs
