[package]
name = "arcanum-create-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
console = "0.15.5"
dialoguer = "0.10.3"
indicatif = "0.17.3"
rust-embed = "6.6.0"
serde_json = "1.0.94"
