[package]
name = "arcanum-create-app"
version = "0.1.0"
authors = ["Waayway"]
description = "A Simple way to create a basic project using the arcanum framework"
homepage = "https://github.com/Waayway/arcanum-create-app"
repository = "https://github.com/Waayway/arcanum-create-app"
documentation = "https://github.com/Waayway/arcanum-create-app"
readme = "README.md"
keywords = ["create-app", "arcanum"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
console = "0.15.5"
dialoguer = "0.10.3"
indicatif = "0.17.3"
rust-embed = {version = "6.6.0", features = ["interpolate-folder-path"]}
serde_json = "1.0.94"
